--- a/SimonYuhYuh/SimonYuhYuh.vcxproj
+++ b/SimonYuhYuh/SimonYuhYuh.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{E16049EA-FC9F-4B6A-9AEB-750BD446AAE3}</ProjectGuid>
     <RootNamespace>SimonYuhYuh</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SimonBrainGame</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
